--- a/client/views/home.html
+++ b/client/views/home.html
@@ -1,4 +1,13 @@
 <template name="home">
+	<nav class="slide-navigation">
+		<ul>
+			<li class="home"></li>
+			<li class="smoke"></li>
+			<li></li>
+			<li></li>
+			<li></li>
+		</ul>
+	</nav>
 	<section class="landing">
 		<div class="landing-left">
 			<!-- <h3>Left Side</h3> -->
@@ -13,7 +22,26 @@
 			</div>
 		</div>
 	</section>
+
 	<section class="section-one">
-		<h2>Section One</h2>
+		<div class="image-container">
+			
+		</div>
+	</section>
+
+	<section class="section-two">
+		
+	</section>
+
+	<section class="section-three">
+		
+	</section>
+
+	<section class="section-four">
+		
+	</section>
+
+	<section class="section-five">
+		
 	</section>
 </template>
