--- a/client/views/home.html
+++ b/client/views/home.html
@@ -6,6 +6,7 @@
 			<li></li>
 			<li></li>
 			<li></li>
+			<li></li>
 		</ul>
 	</nav>
 	<section class="landing">
@@ -24,9 +25,8 @@
 	</section>
 
 	<section class="section-one">
-		<div class="image-container">
-			
-		</div>
+		<div class="image-container"></div>
+		<h1>We drink too much</h1>
 	</section>
 
 	<section class="section-two">
