--- a/client/views/overlay/overlay.html
+++ b/client/views/overlay/overlay.html
@@ -1,5 +1,28 @@
 <template name="overlay">
 	<div class="overlay-container">
-		<div>Overlay</div>
+		<div class="about-paradox">
+			<h2>About this project</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		</div>
+		<div class="credits">
+			<h2>Credits</h2>
+			
+			<div class="team-member">
+				<span class="name">Samantha Rhode</span> <span class="title">Producer</span>
+			</div>
+			<div class="team-member">
+				<span class="name">Andrew Westmaas</span> <span class="title">Co-Producer / Audio</span>
+			</div>
+			<div class="team-member">
+				<span class="name">Josh Pfaff</span> <span class="title">Director / DP</span>
+			</div>
+			<div class="team-member">
+				<span class="name">Kong Thao</span> <span class="title">Chief Audio Engineer</span>
+			</div>
+			<div class="team-member">
+				<span class="name">Logan Sparlin</span> <span class="title">Head of Marketing / Developer</span>
+			</div>
+
+		</div>
 	</div>
 </template>
