--- a/client/views/overlay/overlay.import.styl
+++ b/client/views/overlay/overlay.import.styl
@@ -2,13 +2,48 @@
 	position absolute
 	width 100%
 	height 100%
-	background #1e1e1e
+	background #1e1e1e radial-gradient( #333 , #1f1f1f )
 	z-index 50
 	opacity 0
 	visibility hidden
 	// transform skewY(-10deg) skewX(-7deg)
 	transition all 200ms ease-out
 	color white
+	letter-spacing 0.2em
+	text-transform uppercase
+	line-height 1.5em
+	padding 20px 40px
+	box-sizing border-box
+	h2 
+		font-weight 100
+		font-size 1em
+		margin-bottom 2em
+	p 
+		font-size 0.7em
+	.team-member
+		width 90%
+	.name, .title
+		font-size 0.7em
+	.name
+		font-weight 600
+		font-size 0.8em
+	.title
+		font-weight 100
+		float right
+	.about-paradox
+		width 50%
+		float left 
+		height 100%
+		text-align right
+		box-sizing border-box
+		padding 40px
+	.credits
+		width 50%
+		float right
+		height 100%
+		text-align left
+		box-sizing border-box
+		padding 40px
 	
 .menu--active
 	.overlay-container
